--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
+		"antibotbrowser": "^2.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.21.1",
+		"puppeteer": "^23.9.0",
 		"puppeteer-real-browser": "^1.3.17"
 	}
 }
